--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<section class="container mx-auto">
+<div class="container mx-auto">
   <section id="landingWrapper" class="shadow-2xl rounded">
     <div id="WelcomingFirst" class="gradientBack shadow-2xl rounded">
       <h1>Welcome to <span>Hold-Budget!</span></h1>
@@ -104,10 +104,10 @@
         <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
       </svg>
     </div>
-</section>
-<section class="containerSecond">
+</div>
+<div class="container containerSecond">
 
-</section>
+</div>
 <div class="text-center fixed-bottom place-self-end" id="bounce">
   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#EEEEEE" class="bi bi-arrow-down-short"
        viewBox="0 0 16 16">
