--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -6,8 +6,14 @@ body {
 
 .container{
   height: 100vh;
-  width: 100vw;
+  max-width: 100%;
 }
+
+.containerSecond{
+  background-color: $white;
+
+}
+
 .registerFormWrapper {
   border: $white 2px solid;
   overflow: hidden;
@@ -15,6 +21,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 15px;
+  z-index: 9999 !important;
 
   .header-less-tabs {
     .mat-tab-header {
@@ -180,7 +187,7 @@ body {
 // Main page bouncing arrow
 #bounce {
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   left:50%;
   -moz-animation: bounce 2s infinite;
   -webkit-animation: bounce 2s infinite;
