--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -22,6 +22,8 @@ body {
   align-items: center;
   margin-top: 15px;
   z-index: 9999 !important;
+  transition: left 0.7s;
+  transition-delay: 0.2s;
 
   .header-less-tabs {
     .mat-tab-header {
@@ -204,4 +206,6 @@ body {
   60% {
     transform: translateY(-15px);
   }
-};
+}
+
+;
